# advent-of-code

./: .envrc  README.md  pyproject.toml  requirements.txt  template.py
01/: part1.py  part2.py
02/: part1.py  part2.py
03/: part1.py  part2.py
04/: part1.py  part2.py
05/: part1.py  part2.py
06/: part1.py  part2.py
07/: part1.py  part2.py
08/: part2.py
09/: part1.py
10/: part2.py
11/: part1.py
12/: part2.py
13/: part2.py
14/: part1.py
15/: part1.py
16/: part2.py
17/: part1.py  part2.py
19/: part2.py
20/: part1.py
2020/01/: part1.py  part2.py
2020/02/: part1.py  part2.py
2020/03/: part1.py  part2.py
2020/04/: part1.py  part2.py
2020/05/: part1.py  part2.py
2021/02/: part2.py
2021/03/: part1.py  part2.py
2021/04/: part1.py
2021/05/: part1.py  part2.py
2021/06/: part1.py
2021/07/: part1.py
2021/08/: part1.py  part2.py
2021/09/: part2.py
2021/10/: part1.py
2021/11/: part2.py
2021/12/: part1.py
2021/13/: part1.py
2021/14/: part2.py
2021/15/: part2.py
2021/16/: part1.py
2021/17/: part1.py  part2.py
2021/18/: part1.py  part2.py
2021/19/: part1.py
2021/20/: part2.py
2021/21/: part1.py
2021/22/: part1.py  part2.py
2021/23/: part2.py
2021/24/: part2.py
2022/01/: part1.py  part2.py
2022/02/: part1.py  part2.py
2022/03/: part1.py  part2.py
2022/04/: part1.py  part2.py
2022/05/: part1.py  part2.py
2022/06/: part1.py  part2.py
21/: part2.py
22/: part2.py
23/: part1.py
24/: part1.py
25/: part1.py
lib/: file.py  grid.py  point.py  region.py  test_file.py  tree.py
(+165 files in other folders)
